Tela de detalhes e navegação com argumentos.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.BuscadorDeCep" parent="android:Theme.Material.Light.NoActionBar">
 
-        <item name="android:statusBarColor">@color/blue</item>
+        <item name="android:statusBarColor">@color/orange</item>
 
     </style>
 </resources>
